[package]
name = "iceload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
futures-util = "0.3.30"
mlua = { version = "0.9.9", features = ["luau", "send"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34.7"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-native-roots"] }

